--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="description_hint">Description</string>
     <string name="time_of_day_hint">Time of day</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="gear_hint">Gear</string>
 </resources>
